# static_site_generator

./: .gitignore  LICENSE  build.sh  main.sh  pyproject.toml
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/static_site_gen/: file_handler.py  htmlnode.py  main.py  markdownparser.py  textnode.py
tests/: test_htmlnode.py  test_markdownparser.py  test_textnode.py
